[package]
name = "squire"
version = "0.1.0"
authors = ["Sam Westerman <mail@sampersand.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["roman-numeral-tostring"]
roman-numeral-tostring = []

[dependencies]
parking_lot = "0.11"
