[package]
name = "squire-bin"
version = "0.1.0"
authors = ["Sam Westerman <mail@sampersand.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
squire-compile = { path = "../squire-compile" }
squire-runtime = { path = "../squire-runtime" }

tracing = "0.1.26"
tracing-subscriber = "0.2"
tracing-tree = "0.1"
